Rename executable from 'ter' to 'nx'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,12 @@ project(Nexus
   VERSION 0.0.1
 )
 
-add_executable(ter src/main.cpp src/nx.cpp)
+add_executable(nx src/main.cpp src/nx.cpp)
 
 # Add sources by module
 function(add_sources module)
     file(GLOB sources "src/${module}/*.cpp")
-    target_sources(ter PRIVATE ${sources})
+    target_sources(nx PRIVATE ${sources})
 endfunction()
 
 add_sources(tokenizer)
@@ -21,7 +21,7 @@ add_sources(utils)
 add_sources(interpreter)
 add_sources(parser)
 
-install(TARGETS ter DESTINATION bin)
+install(TARGETS nx DESTINATION bin)
 
 add_custom_target("uninstall" COMMENT "Uninstall installed files")
 add_custom_command(
